2019-09-20 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_widgets.h: Include "geda_gtk_compat.h".

2019-09-19 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define define GtkObject is GtkWidget when Gtk+-3.

    * src/widgets/geda_radio_menu_item.c: Revise geda_radio_menu_item_class_init
      to conditionally compile geda_radio_menu_item_destroy as over-ride to either
      GtkObjectClass->destroy or GtkWidgetClass->destroy.

2019-09-17 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define gdk_cursor_destroy as gdk_cursor_unref
      when gdk_cursor_destroy is not defined.

    * include/geda_toolbar.h: Enumerate GedaToolbarChildType.

    * src/widgets/geda_combobox.c: Substitute gtk_widget_hide_all with
      geda_widget_hide_all.

    * src/functions/geda_widget.c: Add function geda_widget_hide_all.

    * src/widgets/geda_menu.c: Add geda_menu_hide_children and utilize in
      geda_menu_hide_all to replace gtk_widget_hide_all.

    * src/widgets/geda_option_menu.c: Revise geda_option_menu_class_init to
      conditionally compile geda_option_menu_destroy as over-ride to either
      GtkObjectClass->destroy or GtkWidgetClass->destroy and utilize
      geda_widget_hide_all in geda_option_menu_hide_all to replace
      gtk_widget_hide_all.

    * src/widgets/geda_toolbar.c: Substitute GedaToolbarChildType for
      GtkToolbarChildType as the second argument to geda_toolbar_append_element.

    * tests/test_file_chooser.c: Replace GtkObject with GtkWidget as the
      second argument to kill_dependent().

2019-09-16 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define GtkNotebookPage as GtkWidget when
      GtkNotebookPage is not defined.

2019-09-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Define GtkTooltips as void when not defined.

2019-08-21 Wiley E. Hill <wileyhill@gmail.com>
